attended errors and finalized code

--- a/dementia-prediction-ml-main/project.ipynb
+++ b/dementia-prediction-ml-main/project.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 1,
    "id": "797a98df-15ad-4189-a50b-db5ee94bed9d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": null,
    "id": "41270375-af58-47da-9314-4ce8da40de6f",
    "metadata": {
     "tags": []
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": null,
    "id": "9eadb4f0-9a19-47a9-8751-9a456b9a68d1",
    "metadata": {
     "tags": []
@@ -247,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": null,
    "id": "af873f4d-41c3-42ef-9606-53492187418f",
    "metadata": {
     "tags": []
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": null,
    "id": "63e65326-1bda-41a8-899a-e9bb04186b3a",
    "metadata": {
     "tags": []
@@ -334,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": null,
    "id": "265ff2d6-195e-4598-9500-423d161d5aaf",
    "metadata": {
     "tags": []
@@ -372,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": null,
    "id": "ce420305-d252-419c-9eae-798bc8607061",
    "metadata": {
     "tags": []
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": null,
    "id": "e4265f56-c83d-4b70-b619-b24d6f7aab8f",
    "metadata": {
     "tags": []
@@ -431,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": null,
    "id": "634db5fc-103e-473b-a47e-f7f6e27fd190",
    "metadata": {
     "tags": []
@@ -451,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": null,
    "id": "50734433-199f-4826-8735-5cee1661e445",
    "metadata": {
     "tags": []
@@ -518,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": null,
    "id": "0567d16d-6355-4509-98e3-d7f713f8c5ec",
    "metadata": {
     "tags": []
@@ -582,7 +594,7 @@
     "print(f\"Training Accuracy: {100 * train_accuracy:.2f}%, Training Error: {100 * train_error:.2f}%\")\n",
     "print(f\"Validation Accuracy: {100 * clf_accuracy:.2f}%, Validation Error: {100 * clf_validation_error:.2f}%\")\n",
     "\n",
-    "clf_classification_rep = classification_report(y_test, y_pred_clf)\n",
+    "clf_classification_rep = classification_report(y_test, y_pred_clf, zero_division=0)\n",
     "print(clf_classification_rep)"
    ]
   },
@@ -596,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": null,
    "id": "0323f438-103a-4054-a8ac-d2a6019c9a15",
    "metadata": {
     "tags": []
@@ -632,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": null,
    "id": "a38adb06-8874-4f56-9984-ddee165c916c",
    "metadata": {
     "tags": []
@@ -669,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": null,
    "id": "d13436c3-b992-4b51-8873-986584a07a9f",
    "metadata": {
     "tags": []
@@ -701,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": null,
    "id": "a9d98ef5-888d-471e-a832-5771a4937470",
    "metadata": {
     "tags": []
@@ -731,12 +743,6 @@
     "estimator = rfc.estimators_[5]\n",
     "\n",
     "from sklearn.tree import export_graphviz\n",
-    "# Export as dot file\n",
-    "export_graphviz(estimator, out_file='tree.dot', \n",
-    "                feature_names = features,\n",
-    "                class_names = ['dementia'],\n",
-    "                rounded = True, proportion = False, \n",
-    "                precision = 2, filled = True, max_depth=3)\n",
     "\n",
     "# Convert to png using system command (requires Graphviz)\n",
     "from subprocess import call\n",
@@ -832,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
